Add python-multipart to requirements.txt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 # Web Framework
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6  # Required for file uploads (multipart/form-data)
 
 # Data Validation
 pydantic>=2.5.0
