--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.0",
     "plotly.js": "^2.26.0",
-    "react-plotly.js": "^2.6.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -30,5 +32,3 @@
     "vite": "^5.0.8"
   }
 }
-
-
